[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
exclude = sites,.git,build,dist,demos,tests
max-line-length = 99
ignore =
    # closing bracket does not match visual indentation
    E124,
    # continuation line with same indent as next logical line
    E125,
    # continuation line under-indented for visual indent
    E128,
    # at least two spaces before inline comment
    E261,
    # expected 2 blank lines, found 1
    E302,
    # too many blank lines
    E303,
    # module level import not at top of file
    E402,
    # line break after binary operator
    W504,
    # do not use bare 'except'
    E722,
    # ambiguous variable name
    E741,

