[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
exclude = .git,build,dist,sites
max-line-length = 99
ignore =
    # continuation line under-indented for visual indent
    E128,
    # multiple spaces after ':'
    E241,
    # at least two spaces before inline comment
    E261,
    # line break after binary operator
    W504,
    # do not use bare 'except'
    E722,
    # ambiguous variable name
    E741,

